# microsetta-interface

./: .gitattributes  .gitignore  .travis.yml  CLAUDE.md  MANIFEST.in  Makefile  README.md  babel.cfg  keys_for_testing.sh  messages.pot  naive_translate.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml
ci/: conda_requirements.txt  pip_requirements.txt
doc/: babel.md
microsetta_interface/: __init__.py  _version.py  config_manager.py  implementation.py  model_i18n.py  redis_cache.py  routes.yaml  server.py  server_config.json  util.py
microsetta_interface/static/: input_util.js  vue_survey_form.js  vue_survey_form_en_us.js  vue_survey_form_es_es.js  vue_survey_form_es_mx.js
microsetta_interface/static/css/: 4_column_flex.css  minimal_interface.css  tmi_colors.css  ucsd_colors.css
microsetta_interface/static/js/: country_state_list.js  ruleset.js  spain_states.js  us_states.js
microsetta_interface/templates/: account_details.jinja2  account_overview.jinja2  account_removal.jinja2  admin_activation_codes.jinja2  admin_address_verification.jinja2  admin_barcode_search.jinja2  admin_campaign_edit.jinja2  admin_campaign_list.jinja2  admin_ffq_codes.jinja2  admin_home.jinja2  admin_interested_user_edit.jinja2  admin_interested_users.jinja2  admin_perk_fulfillment_state.jinja2  admin_requests_account_removal_list.jinja2  admin_system_panel.jinja2  consents.jinja2  create_nonhuman_source.jinja2  email_confirmation.jinja2  embedded_pdf.jinja2  emperor.jinja2  empress-playground.jinja2  empress-template.html  empress-template.jinja2  empress.jinja2  error.jinja2  faq.jinja2  home.jinja2  kits.jinja2  minor_reconsent.jinja2  myfoodrepo_no_slots.jinja2  new_participant.jinja2  new_results_page.jinja2  nutrition.jinja2  opt_out.jinja2  opt_out_confirm.jinja2  plotly.jinja2  post_sample_questionnaire.jinja2  reports.jinja2  request_account_deletion_confirm.jinja2  request_account_removal_confirm.jinja2  (+13 more)
microsetta_interface/tests/: test_decorator_util.py  test_implementation.py  test_integration.py
microsetta_interface/translations/en_US/LC_MESSAGES/: messages.po
microsetta_interface/translations/es_ES/LC_MESSAGES/: messages.po
microsetta_interface/translations/es_MX/LC_MESSAGES/: messages.po
microsetta_interface/translations/ja_JP/LC_MESSAGES/: messages.po
