[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "microsetta-interface"
authors = [{name = "Daniel McDonald", email = "danielmcdonald@ucsd.edu"}]
description = "The Microsetta participant interface"
license = {text = "BSD-3-Clause"}
urls = {homepage = "https://github.com/biocore/microsetta-interface"}
requires-python = ">=3.11"
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"" = ["translations/*/*/*.mo", "translations/*/*/*.po"]
"microsetta_interface" = [
    "routes.yaml",
    "server_config.json",
    "templates/*.*",
    "static/*",
    "static/css/*",
    "static/img/*",
    "static/img/*/*",
    "static/js/*",
    "static/vendor/js/*",
    "static/vendor/images/*",
    "static/vendor/css/*",
    "static/vendor/js/jquery.form-4.2.2/*",
    "static/vendor/jquery-validation/*",
    "static/vendor/jquery-ui-i18n/*",
    "static/vendor/jquery-ui-1.12.1/*",
    "static/vendor/jquery-ui-1.12.1/images/*",
    "static/vendor/popper-1.11.0/*",
    "static/vendor/bootstrap-5.0.2-dist/js/*",
    "static/vendor/bootstrap-5.0.2-dist/css/*",
    "static/vendor/bootstrap-datetimepicker-4.14.30/*",
    "static/vendor/vue-form-generator-2.3.4/*",
    "static/vendor/bootstrap-3.3.7-dist/js/*",
    "static/vendor/bootstrap-3.3.7-dist/css/*",
    "static/vendor/bootstrap-3.3.7-dist/fonts/*",
    "static/vendor/font-awesome-4.7.0/css/*",
    "static/vendor/font-awesome-4.7.0/less/*",
    "static/vendor/font-awesome-4.7.0/fonts/*",
    "static/vendor/font-awesome-4.7.0/scss/*",
    "static/vendor/DataTables/*",
    "static/vendor/DataTables/Buttons-1.6.2/js/*",
    "static/vendor/DataTables/Buttons-1.6.2/css/*",
    "static/vendor/DataTables/PercentageBars-1.10.21/js/*",
    "static/vendor/DataTables/PercentageBars-1.10.21/css/*",
    "static/vendor/emperor/*",
    "static/vendor/emperor/css/*",
    "static/vendor/emperor/img/*",
    "static/vendor/emperor/js/*",
    "static/vendor/emperor/templates/*",
    "static/vendor/emperor/vendor/*",
    "static/vendor/emperor/vendor/css/*",
    "static/vendor/emperor/vendor/css/font/*",
    "static/vendor/emperor/vendor/css/images/*",
    "static/vendor/emperor/vendor/js/*",
    "static/vendor/emperor/vendor/js/three.js-plugins/*",
    "static/vendor/emperor/vendor/",
    "static/vendor/moment/*",
    "authrocket.pubkey",
]

[tool.setuptools_scm]
version_scheme = "calver-by-date"
